@startuml
skinparam shadowing false

interface ConsumerService
interface PartitionManagedConsumerService
interface ConfigurationListener
abstract AbstractConsumerService

ConsumerService <|-- PartitionManagedConsumerService
ConsumerService <|.. GroupManagedKafkaConsumerService
PartitionManagedConsumerService <|..down- PartitionManagedKafkaConsumerService

AbstractConsumerService -up--|> ConfigurationListener
GroupManagedKafkaConsumerService -left--|> AbstractConsumerService
PartitionManagedKafkaConsumerService -right--|> AbstractConsumerService

GroupManagedConsumerTask -down--* GroupManagedKafkaConsumerService
PartitionManagedConsumerTask -down--* PartitionManagedKafkaConsumerService


@enduml